--- a/Frontend/src/css/Carrusel.css
+++ b/Frontend/src/css/Carrusel.css
@@ -1,16 +1,12 @@
-.carousel-inner img{
-    max-height: 90vh;
-	object-fit: cover;
-    opacity: 0.85;
+.d-block{
+    max-height: 93vh;
+    opacity: 0.87;
+    object-fit: cover;
 }
 
-.carousel-inner h5, p{
+.carousel-caption h3, p{
     color: white;
     font-weight: bold;
+    text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
 }
 
-.pdecarrusel{
-    color:white;
-    font-weight: bold;
-    text-shadow: 2px 2px 4px #000000;
-}
